# smart-door

./: README.md
luckfox_pico_rkmpi_example/: CMakeLists.txt  build.sh  note.txt
luckfox_pico_rkmpi_example/example/luckfox_pico_rtsp_retinaface_facenet/include/: attendance_utils.h  face_align.h  face_db.h  face_event_manager.h  face_test_runner.h  retinaface_facenet.h  telegram_client.h
luckfox_pico_rkmpi_example/example/luckfox_pico_rtsp_retinaface_facenet/lib/: libcurl.so.4.8.0
luckfox_pico_rkmpi_example/example/luckfox_pico_rtsp_retinaface_facenet/src/: attendance_utils.cc  face_align.cc  face_db.cc  face_event_manager.cc  face_test_runner.cc  main.cc  telegram_client.cc
luckfox_pico_rkmpi_example/example/rknn_model_test/: CMakeLists.txt
luckfox_pico_rkmpi_example/example/rknn_model_test/src/: main.cc
luckfox_pico_rkmpi_example/install/uclibc/luckfox_pico_rtsp_retinaface_demo/: luckfox_pico_rtsp_retinaface
luckfox_pico_rkmpi_example/install/uclibc/rknn_model_test_demo/: rknn_model_test
